<resources>
    <string name="app_name">QuizPractice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email_hint">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered ? Sign In</string>
    <string name="welcome_to">Welcome to Quizzy App</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logo_image">logo image</string>
    <string name="not_registered_yet_sign_up">Not registered Yet ? Sign Up</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign In</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="difficulity">Difficulity</string>
    <string name="title">Title</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="retype_password">Retype password</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="not_answer">Not Answer</string>
    <string name="score">Score</string>
</resources>